Fixed a crash when changing fill layer settings

BUG:510037

Test Plan
---------
1. Build using Qt6
2. Create a new moderately large document (e.g. 10000x10000 pixels)
3. Add a fill layer, choose simplex noise, set frequency to 500, click OK
4. In the Layers docker, right-click the fill layer created in step 2, and select Properties. Change the frequency to another high value (e.g., 490), click OK